# raytrace_one_week_1st

./: Cargo.toml  LICENSE  README.md
shaders/: screen_shader.wgsl
src/: buffer.rs  main.rs  renderer.rs  scene.rs
